--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -21,4 +21,5 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - lib/assets/images/splash.png # Add your image asset here
+    - lib/assets/images/splash.png
+    - lib/assets/images/loginsignup.png # Add your image asset here
