back button added on login screen

--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -22,4 +22,6 @@ flutter:
   uses-material-design: true
   assets:
     - lib/assets/images/splash.png
-    - lib/assets/images/loginsignup.png # Add your image asset here
+    - lib/assets/images/loginsignup.png
+    - lib/assets/images/login.png
+    # Add your image asset here
