--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -24,4 +24,9 @@ flutter:
     - lib/assets/images/splash.png
     - lib/assets/images/loginsignup.png
     - lib/assets/images/login.png
+    - lib/assets/images/google.png
+    - lib/assets/images/facebook.png
+    - lib/assets/images/apple.png
+    - lib/assets/images/graph.png
+    - lib/assets/images/brainperson.png
     # Add your image asset here
