--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   animate_do: ^3.0.2
+  vibration: ^1.7.5
 
 dev_dependencies:
   flutter_test:
