--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   image_picker: ^0.8.4+4
   provider: ^6.0.0
   intl: ^0.18.0
+  shared_preferences: ^2.0.0
 
 dev_dependencies:
   flutter_test:
