--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -20,9 +20,10 @@ dependencies:
   provider: ^6.0.0
   intl: ^0.18.0
   shared_preferences: ^2.0.0
-  flutter_spinkit: ^5.2.0 # Add this line
-  http: ^1.1.0 # Add this line
-  google_generative_ai: ^0.2.0 # Add this line
+  flutter_spinkit: ^5.2.0
+  http: ^1.1.0
+  google_generative_ai: ^0.2.0
+  
 
 dev_dependencies:
   flutter_test:
