--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_spinkit: ^5.2.0 # Add this line
   http: ^1.1.0 # Add this line
   google_generative_ai: ^0.2.0 # Add this line
+  lottie: ^2.7.0 # Add this line
 
 dev_dependencies:
   flutter_test:
