--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   flutter_spinkit: ^5.2.0
   http: ^1.1.0
   google_generative_ai: ^0.2.0
+  confetti: ^0.6.0
 
 
 dev_dependencies:
