--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -26,7 +26,12 @@ dependencies:
   confetti: ^0.6.0
   just_audio: ^0.9.35
   audio_session: ^0.1.16
-
+  speech_to_text: ^6.3.0
+  google_mlkit_face_detection: ^0.8.0
+  camera: ^0.10.5+4
+  geolocator: ^10.1.0
+  url_launcher: ^6.1.14
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
