--- a/FrontEnd/ios/Runner/Info.plist
+++ b/FrontEnd/ios/Runner/Info.plist
@@ -49,5 +49,15 @@
 	<string>We need access to your microphone to record audio.</string>
 	<key>NSDocumentsFolderUsageDescription</key>
 	<string>We need access to your documents folder to save audio recordings.</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+		<string>fetch</string>
+		<string>remote-notification</string>
+	</array>
+	<key>NSCalendarsUsageDescription</key>
+	<string>This app needs calendar access to schedule task reminders</string>
+	<key>NSRemindersUsageDescription</key>
+	<string>This app needs reminders access to alert you about tasks</string>
 </dict>
 </plist>
