--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
   geolocator: ^10.1.0
   url_launcher: ^6.1.14
   permission_handler: ^11.0.1
+  flutter_animate: ^4.1.1
+  flutter_local_notifications: ^16.1.0
+  timezone: ^0.9.2
+  rxdart: ^0.27.7
 
 dev_dependencies:
   flutter_test:
