updated images for image match

--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -63,4 +63,5 @@ flutter:
     - lib/assets/images/story.png
     - lib/assets/images/memoraid.png
     - lib/assets/images/kushen.png
-    - lib/assets/images/spot1.png
+    - lib/assets/images/spot1.jpeg
+    - lib/assets/images/spot2.jpeg
