changes finding coordinates

--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -65,3 +65,5 @@ flutter:
     - lib/assets/images/kushen.png
     - lib/assets/images/spot1.jpeg
     - lib/assets/images/spot2.jpeg
+    - lib/assets/images/crow1.jpeg
+    - lib/assets/images/crow2.jpeg
