--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -67,3 +67,5 @@ flutter:
     - lib/assets/images/spot2.jpeg
     - lib/assets/images/crow1.jpeg
     - lib/assets/images/crow2.jpeg
+    - lib/assets/images/plane1.jpeg
+    - lib/assets/images/plane2.jpeg
