--- a/FrontEnd/ios/Podfile
+++ b/FrontEnd/ios/Podfile
@@ -42,6 +42,17 @@ post_install do |installer|
       config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
       # For Apple Silicon support
       config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'i386'
+      
+      # Fix for Xcode 14+ arm64 architecture issues with some dependencies
+      config.build_settings['EXCLUDED_ARCHS[sdk=iphonesimulator*]'] = 'arm64'
+      
+      # For Flutter compatibility
+      config.build_settings['ENABLE_BITCODE'] = 'NO'
     end
+  end
+
+  # This helps with arm64 architecture issues
+  installer.pods_project.build_configurations.each do |config|
+    config.build_settings["EXCLUDED_ARCHS[sdk=iphonesimulator*]"] = "arm64"
   end
 end
