--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -55,3 +55,4 @@ flutter:
     - lib/assets/images/spot1.jpeg
     - lib/assets/images/spot2.jpeg
     - lib/assets/images/crow1.jpeg
+    - lib/assets/images/crow2.jpeg
