--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -56,3 +56,7 @@ flutter:
     - lib/assets/images/spot2.jpeg
     - lib/assets/images/crow1.jpeg
     - lib/assets/images/crow2.jpeg
+    - lib/assets/images/plane1.jpeg
+    - lib/assets/images/plane2.jpeg
+    - lib/assets/images/dog1.jpeg
+    - lib/assets/images/dog2.jpeg
