--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -55,4 +55,14 @@ flutter:
     - lib/assets/images/spot1.jpeg
     - lib/assets/images/spot2.jpeg
     - lib/assets/images/crow1.jpeg
-
+    - lib/assets/images/Family.jpeg
+    - lib/assets/images/Mansion.jpeg
+    - lib/assets/images/MarsMission.jpeg
+    - lib/assets/images/Rainforest.jpeg
+    - lib/assets/images/ArcticExpedition.jpeg
+    - lib/assets/images/Traveler.jpeg
+    - lib/assets/images/RiversCrossing.jpeg
+    - lib/assets/images/dog1.jpeg
+    - lib/assets/images/dog2.jpeg
+    - lib/assets/images/plane1.jpeg
+    -lib/assets/images/plane2.jpeg
