--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -71,3 +71,4 @@ flutter:
     - lib/assets/images/cow2.jpeg
     - lib/assets/images/boy1.jpeg
     - lib/assets/images/boy2.jpeg
+    - lib/assets/images/no.png
