--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   confetti: ^0.7.0
   just_audio: ^0.9.36
   video_player: ^2.7.0
+  cached_network_image: ^3.2.3
+
 
 dev_dependencies:
   flutter_test:
