--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   video_player: ^2.7.0
   cached_network_image: ^3.2.3
   lottie: ^2.6.0
+  flutter_animate: ^4.2.0
 
 dev_dependencies:
   flutter_test:
