--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -39,52 +39,52 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - lib/assets/images/splash.png
-    - lib/assets/images/loginsignup.png
-    - lib/assets/images/login.png
-    - lib/assets/images/google.png
-    - lib/assets/images/facebook.png
-    - lib/assets/images/apple.png
-    - lib/assets/images/graph.png
-    - lib/assets/images/brainperson.png
-    - lib/assets/images/Trust.png
-    - lib/assets/images/sendmoney.png
-    - lib/assets/images/receivemoney.png
-    - lib/assets/images/backgroundhex.png
-    - lib/assets/images/mind.png
-    - lib/assets/images/patient.png
-    - lib/assets/images/reminder.png
-    - lib/assets/images/story.png
-    - lib/assets/images/memoraid.png
-    - lib/assets/images/kushen.png
-    - lib/assets/images/spot1.jpeg
-    - lib/assets/images/spot2.jpeg
-    - lib/assets/images/crow1.jpeg
-    - lib/assets/images/crow2.jpeg
-    - lib/assets/images/Family.jpeg
-    - lib/assets/images/Mansion.jpeg
-    - lib/assets/images/MarsMission.jpeg
-    - lib/assets/images/Rainforest.jpeg
-    - lib/assets/images/ArcticExpedition.jpeg
-    - lib/assets/images/Traveler.jpeg
-    - lib/assets/images/RiversCrossing.jpeg
-    - lib/assets/images/dog1.jpeg
-    - lib/assets/images/dog2.jpeg
-    - lib/assets/images/plane1.jpeg
-    - lib/assets/images/plane2.jpeg
-    - lib/assets/images/cow1.jpeg
-    - lib/assets/images/cow2.jpeg
-    - lib/assets/images/boy1.jpeg
-    - lib/assets/images/boy2.jpeg
-    - lib/assets/images/no.png
-    - lib/assets/images/CrossBody.webp
-    - lib/assets/images/yoga.jpeg
-    - lib/assets/images/hand.webp
-    - lib/assets/images/relax.png
-    - lib/assets/audio/Story1.mp3
-    - lib/assets/audio/Story2.mp3
-    - lib/assets/audio/Story3.mp3
-    - lib/assets/audio/Story5.mp3
-    - lib/assets/audio/Story7.mp3
-    - lib/assets/audio/Story8.mp3
-    - lib/assets/audio/Story9.mp3
+    - assets/images/splash.png
+    - assets/images/loginsignup.png
+    - assets/images/login.png
+    - assets/images/google.png
+    - assets/images/facebook.png
+    - assets/images/apple.png
+    - assets/images/graph.png
+    - assets/images/brainperson.png
+    - assets/images/Trust.png
+    - assets/images/sendmoney.png
+    - assets/images/receivemoney.png
+    - assets/images/backgroundhex.png
+    - assets/images/mind.png
+    - assets/images/patient.png
+    - assets/images/reminder.png
+    - assets/images/story.png
+    - assets/images/memoraid.png
+    - assets/images/kushen.png
+    - assets/images/spot1.jpeg
+    - assets/images/spot2.jpeg
+    - assets/images/crow1.jpeg
+    - assets/images/crow2.jpeg
+    - assets/images/Family.jpeg
+    - assets/images/Mansion.jpeg
+    - assets/images/MarsMission.jpeg
+    - assets/images/Rainforest.jpeg
+    - assets/images/ArcticExpedition.jpeg
+    - assets/images/Traveler.jpeg
+    - assets/images/RiversCrossing.jpeg
+    - assets/images/dog1.jpeg
+    - assets/images/dog2.jpeg
+    - assets/images/plane1.jpeg
+    - assets/images/plane2.jpeg
+    - assets/images/cow1.jpeg
+    - assets/images/cow2.jpeg
+    - assets/images/boy1.jpeg
+    - assets/images/boy2.jpeg
+    - assets/images/no.png
+    - assets/images/CrossBody.webp
+    - assets/images/yoga.jpeg
+    - assets/images/hand.webp
+    - assets/images/relax.png
+    - assets/audio/Story1.mp3
+    - assets/audio/Story2.mp3
+    - assets/audio/Story3.mp3
+    - assets/audio/Story5.mp3
+    - assets/audio/Story7.mp3
+    - assets/audio/Story8.mp3
+    - assets/audio/Story9.mp3
