--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   lottie: ^2.6.0
   flutter_animate: ^4.2.0
   audio_session: ^0.1.16
+  google_sign_in: ^6.1.4
+  flutter_secure_storage: ^8.0.0
+  jwt_decoder: ^2.0.1
 
 dev_dependencies:
   flutter_test:
