updated game screen images

--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -91,3 +91,8 @@ flutter:
     - assets/audio/Story7.mp3
     - assets/audio/Story8.mp3
     - assets/audio/Story9.mp3
+    - assets/images/Emojie.jpeg
+    - assets/images/Neurosnap.jpeg
+    - assets/images/Pathquest.jpeg
+    - assets/images/Sequence.jpeg
+    - assets/images/Spot.jpeg
