--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_sign_in: ^6.1.4
   flutter_secure_storage: ^8.0.0
   jwt_decoder: ^2.0.1
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
@@ -96,3 +97,4 @@ flutter:
     - assets/images/Pathquest.jpeg
     - assets/images/Sequence.jpeg
     - assets/images/Spot.jpeg
+    - .env
