--- a/FrontEnd/pubspec.yaml
+++ b/FrontEnd/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   google_sign_in: ^6.1.4
   flutter_secure_storage: ^8.0.0
   jwt_decoder: ^2.0.1
+  supabase_flutter: ^2.8.4
 
 dev_dependencies:
   flutter_test:
